--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7">
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Work Experience</h4>
@@ -85,7 +85,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
+                    <div class="col-lg-6"></div>
                     <div class="col-lg-6">
                         <div class="bg-white text-center h-100 project">
                             <div class="d-flex h-100">
@@ -106,7 +106,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
+                    <div class="col-lg-6"></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-white text-center h-100 project">
                             <div class="d-flex h-100">
@@ -142,6 +142,10 @@
                         <div class="bg-white text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <br>
+                                    <p>&nbsp;</p>
+                                    <p>&nbsp;</p>
+                                    <p>&nbsp;</p>
                                 <h4 class="text-uppercase m-0">Skills</h4>
                                 <hr class="my-4 mx-auto" />
                                 <div class="small text-black-50">
